	  statusbar(), nanorc.sample, nano.1, and nanorc.5. (DLR,
	  suggested by CHAO Wei-Lun)
	- Add support for case insensitive expression matching when
	  using color syntax highlighting, via the "icolor" directive,
	  and add it to those regexes that can use it.  Changes to
	  parse_colors(), parse_rcfile(), nanorc.sample, and nanorc.5.
	  (Brand Huntsman, minor tweaks by DLR)
- chars.c:
  make_mbstring()
	- Change erroneous ENABLE_EXTRA #ifdef to NANO_EXTRA to fix a
	  compilation problem when --enable-nanorc isn't used and
	  --enable-extra is. (DLR)
- color.c:
  update_color()
	- Use mbstrcasecmp() instead of strcasecmp(), so that UTF-8
	  color syntax names are properly detected. (DLR)
- cut.c:
  cut_line()
	- Set placewewant properly after cutting a line, to avoid a
	  problem where the screen won't be updated if (a) we're not on
	  the first page when we cut the line, and (b) immediately after
	  we cut the line, we hit End to move to the end of the line
	  after it. (DLR)
- files.c:
  read_line()
	- Rename variable prev to prevnode to avoid confusion. (DLR)
	- Rename variable len to buf_len, for consistency. (DLR)
  load_open_file()
	- Remove an unneeded clearok(FALSE). (DLR)
  get_next_filename()
	- Use an unsigned long instead of an int for the number
	  prepended to the filename. (DLR)
  do_insertfile()
	- Set i to 0 when we get a filename via the file browser, so
	  that it's read in properly when we exit the file browser.
	  (DLR)
  open_prevnext_file()
	- Move up a misplaced assert. (DLR)
	- Rename variable next to next_file, to avoid confusion. (DLR)
  write_file()
	- Since lineswritten is a size_t, print its value as an unsigned
	  long instead of an unsigned int. (DLR)
	- Declare the size_t i only in the loop where it's used. (DLR)
  diralphasort()
	- Use mbstrcasecmp() instead of strcasecmp(), so that UTF-8
	  filenames are sorted properly. (DLR)
  cwd_tab_completion(), browser_init()
	- Rename variable next to nextdir to avoid confusion. (DLR)